# cartoboost

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BRANDING.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  docusaurus.config.ts  justfile  llms.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sidebars.ts
.github/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml  pages.yml  publish-pypi.yml  release-version.yml
artifacts/: forecasting_benchmark.json  forecasting_library_benchmark_duckdb.json  forecasting_library_benchmark_polars.json
benches/: AGENTS.md  README.md  benchmark_summary.json  data_loading.rs  forecasting.rs  prediction.rs  serialize.rs  training.rs
benchmarks/: __init__.py
benchmarks/configs/: budgets.json  hardware.json  required_baselines.json  seeds.json
benchmarks/reports/: benchmark_report_template.md  (+2 more)
configs/: AGENTS.md  basic.toml  classification.toml  regression.toml
crates/: AGENTS.md
crates/cartoboost-core/: AGENTS.md  Cargo.toml
crates/cartoboost-core/src/: AGENTS.md  geo.rs  lib.rs  profile.rs  utilities.rs
crates/cartoboost-core/src/booster/: AGENTS.md  classifier.rs  fit.rs  mod.rs  predict.rs  ranker.rs
crates/cartoboost-core/src/data/: AGENTS.md  categorical.rs  feature_schema.rs  feature_schema_tests.rs  matrix.rs  mod.rs  sparse_sets.rs  sparse_sets_tests.rs  weights.rs
crates/cartoboost-core/src/explain/: AGENTS.md  mod.rs
crates/cartoboost-core/src/finance/: mod.rs  portfolio.rs
crates/cartoboost-core/src/forecasting/: artifacts.rs  auto.rs  autostats.rs  backtesting.rs  classical_bank.rs  config.rs  conformal.rs  decomposition.rs  diagnostics.rs  direct.rs  ensemble.rs  features.rs  frequency.rs  gating.rs  global.rs  hierarchy.rs  horizon.rs  intermittent.rs  lag_features.rs  lag_plus.rs  local.rs  metrics.rs  mod.rs  mstl.rs  objective.rs  probabilistic.rs  quantiles.rs  rank_probability.rs  reconciliation.rs  registry.rs  result.rs  schema.rs  sequence.rs  splitters.rs  stl.rs  target_transform.rs  temporal_hierarchy.rs  traits.rs
crates/cartoboost-core/src/loss/: AGENTS.md  l2.rs  mod.rs  quantile.rs
crates/cartoboost-core/src/metrics/: AGENTS.md  m6.rs  mod.rs  pinball.rs  rank_portfolio.rs  rps.rs  wrmsse.rs
crates/cartoboost-core/src/objectives/: hurdle.rs  mod.rs  negative_binomial.rs  poisson.rs  tweedie.rs
crates/cartoboost-core/src/predictors/: AGENTS.md  constant.rs  linear.rs  mod.rs
crates/cartoboost-core/src/serialize/: AGENTS.md  mod.rs  serialize_tests.rs
crates/cartoboost-core/src/splitters/: AGENTS.md  axis.rs  diagonal2d.rs  fuzzy.rs  gaussian2d.rs
crates/cartoboost-core/src/tree/: AGENTS.md  builder.rs  gain.rs  histogram.rs  mod.rs  node.rs  routing_tests.rs
crates/cartoboost-core/tests/: AGENTS.md  booster_model_correctness.rs  forecasting_decomposition_autostats_tests.rs  forecasting_direct_objectives_tests.rs  forecasting_ensemble_gating_tests.rs  forecasting_frame_features_tests.rs  forecasting_lag_global_tests.rs  forecasting_model_correctness.rs  forecasting_probabilistic_m6_tests.rs  forecasting_rank_portfolio_tests.rs  forecasting_reconciliation_tests.rs  forecasting_tests.rs  property.rs
crates/cartoboost-neural/: Cargo.toml
crates/cartoboost-neural/src/: artifact.rs  encoder.rs  error.rs  features.rs  graph_features.rs  graphsage.rs  lib.rs  node2vec.rs  standalone.rs  trainer.rs
crates/cartoboost-neural/src/forecasting/: dataloader.rs  mod.rs  nbeats.rs  nhits.rs  scaler.rs
crates/cartoboost-neural/tests/: forecasting_neural_tests.rs  test_embedding_table.rs  test_graphsage.rs  test_standalone_model_correctness.rs
crates/cartoboost-py/: AGENTS.md  Cargo.toml  README.md  pyproject.toml
crates/cartoboost-py/src/: AGENTS.md  lib.rs
crates/cartoboost-wasm/: Cargo.toml
crates/cartoboost-wasm/src/: lib.rs
crates/geoboost-py/: AGENTS.md  Cargo.toml  README.md  pyproject.toml
crates/geoboost-py/src/: AGENTS.md  lib.rs
docs/: AGENTS.md  README.md  constraints.md  evaluation_protocol.md  feature_catalog.md  feature_schema.md  fixture-contract.md  forecasting.md  forecasting_api.md  forecasting_artifacts.md  forecasting_backtesting.md  forecasting_cli.md  forecasting_decomposition.md  forecasting_direct.md  forecasting_ensemble.md  forecasting_examples.md  forecasting_frame.md  forecasting_hybridization_assessment.md  forecasting_lag_features.md  forecasting_models.md  forecasting_neural.md  forecasting_overhaul.md  forecasting_probabilistic.md  forecasting_pure_rust_plan.md  forecasting_quality_tests.md  forecasting_reconciliation.md  general_utilities.md  getting-started.md  golden-data-workflow.md  graph-features.md  implementation_status.md  index.md  installation.md  integration-contract.md  limitations.md  llms.txt  model_artifact.md  modeling_v2_alpha.md  neural-features.md  nyc_taxi_benchmarks.md  (+9 more)
examples/: 02_spatial_splits.py  03_taxi_od_graph_regression.py  04_taxi_pickup_zone_graph.py  05_neural_embedding_regression.py  AGENTS.md  README.md  synthetic_binary_config.json  synthetic_ranking_config.json  synthetic_regression_config.json
fuzz/: AGENTS.md  Cargo.toml
fuzz/fuzz_targets/: AGENTS.md  deserialize_model.rs  predict_dataset_row_mixed_dataset.rs  predict_one.rs  train_small_dataset.rs
python/: AGENTS.md
scripts/: AGENTS.md  __init__.py  compare_baselines.py  compare_forecasting_baselines.py  forecast.py  forecasting_benchmark.py  forecasting_generalization.py  forecasting_library_benchmark.py  forecasting_m4.py  forecasting_m5.py  forecasting_m6.py  generate_segmentation_proofs.py  generate_synthetic_data.py  plot_benchmarks.py  render_route_splitter_logo.py  run_full_validation.py  run_lane_level_acceptance_metrics.py  run_model_benchmark_suite.py  run_neural_embedding_benchmark.py  run_nyc_taxi_optimization_loop.py  run_nyc_taxi_quality_benchmarks.py  run_repeated_nyc_taxi_benchmarks.py  run_splitter_acceptance_metrics.py  run_v02_modeling_benchmarks.py  run_v1_validation.py  trace_walltime.py  validation_report.py
tests/: AGENTS.md  conftest.py  generate_parity_fixture.py  test_fixture_contract.py
(+328 files in other folders)
