[workspace]
members = [
    "crates/cartoboost-core",
    "crates/cartoboost-neural",
    "crates/cartoboost-cli",
    "crates/cartoboost-py",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/theculliganman/cartoboost"
homepage = "https://github.com/theculliganman/cartoboost"
description = "Clean-room CartoBoost-inspired regression package."
readme = "README.md"
authors = ["Ryan Culligan"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.23", features = ["extension-module"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
criterion = "0.5"
