[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "cartoboost"
version = "0.1.17"
description = "Clean-room CartoBoost-inspired regression package."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Ryan Culligan" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["boosting", "gradient-boosting", "machine-learning", "python", "rust"]
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
explain = [
    "shap>=0.49.1,<0.50",
]
onnx = [
    "onnx>=1.16",
]
optuna = [
    "optuna>=4.0",
]
polars = [
    "polars>=1.0",
]

[dependency-groups]
bench = [
    "lightgbm>=4.0",
    "pandas>=2.0,<3",
    "pyarrow>=14.0",
    "xgboost>=2.0",
]
dev = [
    "hypothesis>=6.100",
    "maturin>=1.7,<2",
    "matplotlib>=3.7",
    "optuna>=4.0",
    "polars>=1.0",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.50",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/theculliganman/cartoboost"
Repository = "https://github.com/theculliganman/cartoboost"
Issues = "https://github.com/theculliganman/cartoboost/issues"

[tool.maturin]
manifest-path = "crates/cartoboost-py/Cargo.toml"
module-name = "cartoboost._native"
python-source = "python"
features = ["pyo3/extension-module"]
bindings = "pyo3"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unsupported-operator = "ignore"
