[package]
name = "cartoboost-core"
version = "0.2.7"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
rayon = "1.11"
toml.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3"

[[bench]]
name = "prediction"
path = "../../benches/prediction.rs"
harness = false

[[bench]]
name = "training"
path = "../../benches/training.rs"
harness = false

[[bench]]
name = "serialize"
path = "../../benches/serialize.rs"
harness = false

[[bench]]
name = "data_loading"
path = "../../benches/data_loading.rs"
harness = false

[[bench]]
name = "forecasting"
path = "../../benches/forecasting.rs"
harness = false
