[package]
name = "cartoboost-neural"
version = "0.1.70"
edition.workspace = true
license.workspace = true

[dependencies]
cartoboost-core = { path = "../cartoboost-core" }
rayon = "1.11"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
