[package]
name = "cartoboost-py"
version = "0.1.4"
edition.workspace = true
license.workspace = true
description = "PyO3 bindings for the CartoBoost Python package"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
cartoboost-core = { path = "../cartoboost-core" }
numpy = "0.23"
pyo3.workspace = true
serde_json.workspace = true
