[package]
name = "geoboost-py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PyO3 bindings for the GeoBoost Python package"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
geoboost-core = { path = "../geoboost-core" }
numpy = "0.23"
pyo3.workspace = true
serde_json.workspace = true
