[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "geoboost"
version = "0.1.0"
description = "Clean-room GeoBoost-inspired regression package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "GeoBoost contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "geoboost._native"
python-source = "../../python"
features = ["pyo3/extension-module"]
